# DECENTRALIZED-APP

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  BACKEND-API-MONITOR-TOOLS.MD  CHANGELOG.md  CODEQL.MD  CODE_OF_CONDUCT.md  COMPLETE-CROSS-PLATFORM-SETUP.md  CONTRIBUTING.md  CREDENTIALS-AND-CONFIGURATION.md  Cargo.toml  Cargo.toml.backup  DATABASE_DEBUGGING_TESTING_ENHANCEMENTS_SUMMARY.md  DECENTRALIZED-APP.MD  DECENTRALIZED-STORE.MD  DEPLOYMENT.md  ERROR_HANDLING_SUMMARY.md  FORENSICS-EVIDENCE-IMPLEMENTATION.MD  GRACEFUL-DEGRADATION-IMPLEMENTATION.MD  GUIDELINE-ROLE-DAPP.MD  HARDENING-GUIDE.md  INCIDENT-RESPONSE-IMPLEMENTATION.MD  LICENSE-MIT  MEV-IMPLEMENTATION-SUMMARY.md  Makefile  Makefile.ps1  OBSERVABILITY-TELEMETRY-SUMMARY.MD  README.md  RESILIENCE-AVAILABILITY-IMPLEMENTATION-SUMMARY.MD  RESILIENCE-AVAILABILITY.MD  RULES.md  SECURITY-DETECTION-IMPLEMENTATION.MD  SECURITY.md  SETUP-GUIDE.md  TELEMETRY-IMPLEMENTATION.MD  TRAFFIC-PROTECTION-IMPLEMENTATION.MD  TROUBLESHOOTING-RUST-EDITION2024.md  UPGRADEABILITY-IMPLEMENTATION-SUMMARY.md  (+27 more)
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs
crates/bridge/tests/: bridge_integration.rs
crates/cli/: Cargo.toml  Dockerfile
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: aa_security.rs  automated_remediation.rs  container_hardening.rs  data_integrity.rs  data_protection.rs  debug_test.rs  evidence.rs  financial_integrity.rs  hash_chain.rs  incident_response.rs  lib.rs  logging.rs  mev_mitigation.rs  observability.rs  policy_enforcement.rs  rate_limiting.rs  resilience_availability.rs  risk.rs  rpc_resilience.rs  sla_monitoring.rs  supply_chain.rs  supply_chain.rs.backup2  supply_chain.rs.backup4  supply_chain.rs.backup5  supply_chain.rs.bak  tx_routing.rs  vendor.rs  vendor_access.rs  vendor_auth.rs  vendor_key_management.rs  vendor_logging.rs  vendor_management.rs  vendor_monitoring.rs  vendor_policy_management.rs
crates/core/tests/: automation_defense_tests.rs  container_hardening_integration.rs  data_integrity_integration.rs  data_protection_integration.rs  dsr_implementation.rs  financial_integrity_tests.rs  forensics_evidence_tests.rs  graceful_degradation_security_validation.rs  graceful_degradation_tests.rs  incident_response_integration.rs  incident_response_tests.rs  observability_integration.rs  resilience_availability_integration.rs  rpc_resilience_integration.rs  security_detection_tests.rs  storage_integrity_implementation.rs  supply_chain_build_integrity.rs  supply_chain_drift_simulation.rs  supply_chain_drift_tests.rs  supply_chain_integration.rs  telemetry_tests.rs  traffic_protection_tests.rs
crates/governance/: Cargo.toml
crates/governance/src/: lib.rs
crates/keeper/: Cargo.toml
crates/keeper/src/: lib.rs
crates/legal/: Cargo.toml
crates/legal/src/: lib.rs
crates/oracle/: Cargo.toml  ORACLE_SECURITY_IMPLEMENTATION_SUMMARY.md
crates/security_layers/: BACKUP_RESTORE_IMPLEMENTATION_SUMMARY.md  CLIENT_PROTECTION_IMPLEMENTATION_SUMMARY.md  Cargo.toml  DATA_AT_REST_IMPLEMENTATION_SUMMARY.md  DATA_CLASSIFICATION_DOCUMENTATION.md  DATA_CLASSIFICATION_SUMMARY.md  DATA_MINIMIZATION_IMPLEMENTATION_SUMMARY.md  DATA_SECURITY_IMPLEMENTATION_SUMMARY.md  DATA_SECURITY_LAYER_COMPLETE_IMPLEMENTATION_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETION_SUMMARY.md  LINES_5_6_IMPLEMENTATION_SUMMARY.md  LINES_6_7_IMPLEMENTATION_SUMMARY.md  LINES_7_8_IMPLEMENTATION_SUMMARY.md  LINES_8_9_IMPLEMENTATION_SUMMARY.md  LINES_9_10_IMPLEMENTATION_SUMMARY.md  LINE_10_COMPLETION_SUMMARY.md  LINE_10_IMPLEMENTATION_SUMMARY.md  LINE_11_COMPLETION_SUMMARY.md  LINE_11_IMPLEMENTATION_SUMMARY.md  LINE_12_COMPLETION_SUMMARY.md  LINE_12_IMPLEMENTATION_SUMMARY.md  LINE_13_COMPLETION_SUMMARY.md  LINE_13_IMPLEMENTATION_SUMMARY.md  NETWORK_INFRA_SECURITY_IMPLEMENTATION_SUMMARY.md  ROLLUP_MATRIX_IMPLEMENTATION_SUMMARY.md  SECURITY_LAYERS_IMPLEMENTATION_SUMMARY.md  SPECIFIC_FEATURES_IMPLEMENTATION_SUMMARY.md  TLS_DOCUMENTATION.md  TLS_EVERYWHERE_IMPLEMENTATION_SUMMARY.md  TLS_SUMMARY.md  run_test.ps1
services/aa-bundler/: Cargo.toml  Dockerfile
services/api-rs/: Cargo.toml  Dockerfile
services/indexer-rs/: Cargo.toml  Dockerfile
services/ipfs-rs/: Cargo.toml  Dockerfile
services/keepers-rs/: Cargo.toml  Dockerfile
tests/: Cargo.toml  aa_simulation.rs  amm-reference-model.py  basic_test.rs  bridge_security_simulation.rs  commit-signing-validation.ps1  container_hardening_simulation.rs  data_integrity_simulation.rs  data_protection_simulation.rs  e2e_tracing_tests.rs  economic_simulation.rs  group_b_infra_security_tests.rs  hash_chain_verification_tests.rs  incident_response_simulation.rs  integration_test.rs  kpi_tests.rs  lob-reference-model.py  main.rs  math-reference-model.py  mev-reference-model.py  mev_simulation.rs  observability_simulation.rs  oracle-reference-model.py  oracle_integrity.rs  proof_of_reserves_validation.rs  rate_limiting_simulation.rs  resilience_availability_runner.rs  resilience_availability_simulation.rs  risk-reference-model.py  rpc_resilience_runner.rs  rpc_resilience_simulation.rs  scaffold_integration_test.rs  scaffold_tests.rs  supply_chain_integration.rs  supply_chain_simulation.rs  tamper_evidence_tests.rs  tx_routing_simulation.rs  vendor_access_controls_tests.rs  vendor_key_management_tests.rs  vendor_management_validation.rs  (+1 more)
tests/chaos/: README.md  mod.rs
tests/e2e/: README.md  mod.rs
tests/fuzz/: mod.rs
tests/perf/: README.md
tests/policy-tests/: iam_key_management_validation.rs  infra_security_validation.rs  policy-validation.ps1  policy-validation.sh  policy_as_code_validation.rs  vendor_policy_tests.rs
tests/security/: mod.rs
tests/synthetic/: README.md  api_functionality_test.sh  api_health_check.ps1  api_health_check.sh  api_performance_test.sh  push_metrics.ps1  push_metrics.sh
web-ui/: Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  TESTING.md  build.ps1  build.sh  dev-server.ps1  index.html  simple-server.py  styles.css
web-ui/src/: lib.rs  router.rs  state.rs
(+492 files in other folders)
