[workspace]
members = [
    "crates/*",
    "services/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/attakdefand/MONDOL-DECENTRALIZED-EXCHANGE.git"

[workspace.dependencies]
# Common dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web3 related dependencies
ethers = "2.0"
alloy = "0.1"
reqwest = { version = "0.11", features = ["json"] }

# Regex dependency
regex = "1.0"

# Cryptography dependencies
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
sha3 = "0.10"

# Database related dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = "0.24"

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = "0.5"

# Observability dependencies
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.1", features = ["logs"] }
opentelemetry-jaeger = "0.20"
tracing-opentelemetry = "0.22"
opentelemetry-prometheus = "0.14"
prometheus-client = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true