[package]
name = "dex-web-ui"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
wasm-logger = "0.2"
log = "0.4"
gloo = "0.8"
gloo-net = "0.2"
gloo-timers = { version = "0.2", features = ["futures"] }
gloo-utils = "0.1"
gloo-storage = "0.2"
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"
futures-util = "0.3"
anyhow = "1.0"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"

[dev-dependencies]
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"