[package]
name = "bridge"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Cross-chain bridge implementation"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

ethers = { workspace = true }
alloy = { workspace = true }

core = { path = "../core" }

[lib]
crate-type = ["rlib"]

[[bin]]
name = "bridge_security_simulation"
path = "src/bin/bridge_security_simulation.rs"