[package]
name = "decentralized-app-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI for the decentralized application"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[[bin]]
name = "dex"
path = "src/main.rs"