[package]
name = "dex-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Command-line interface for the Decentralized Exchange application"

[dependencies]
tokio = { workspace = true, features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Local dependencies
core = { path = "../core" }