[package]
name = "core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core components for the decentralized application"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

ethers = { workspace = true }
alloy = { workspace = true }
reqwest = { workspace = true }
rand = "0.8"
hex = "0.4"
sha3 = "0.10"
aes-gcm = "0.10"
uuid = { version = "1.0", features = ["v4"] }

[lib]
crate-type = ["rlib"]

[[bin]]
name = "rpc_resilience_simulation"
path = "src/bin/rpc_resilience_simulation.rs"

[[bin]]
name = "container_hardening_simulation"
path = "src/bin/container_hardening_simulation.rs"

[[bin]]
name = "supply_chain_simulation"
path = "src/bin/supply_chain_simulation.rs"

[[bin]]
name = "observability_simulation"
path = "src/bin/observability_simulation.rs"

[[bin]]
name = "incident_response_simulation"
path = "src/bin/incident_response_simulation.rs"

[[bin]]
name = "resilience_availability_simulation"
path = "src/bin/resilience_availability_simulation.rs"