[package]
name = "governance"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Governance implementation for decentralized protocol governance"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

ethers = { workspace = true }
alloy = { workspace = true }

core = { path = "../core" }

[lib]
crate-type = ["rlib"]