[package]
name = "decentralized-app-oracle"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Oracle service for DECENTRALIZED-APP"
repository = "https://github.com/attakdefand/DECENTRALIZED-APP.git"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
ethers = "2.0"

[dev-dependencies]
tokio-test = "0.4"