[package]
name = "aa-bundler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
prometheus-client = "0.22"
core = { path = "../../crates/core" }

[dev-dependencies]
tokio-test = "0.4"