[package]
name = "api-service"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "API service for the decentralized application"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "0.14"

# Schema validation
utoipa = "5.4"
utoipa-swagger-ui = "9.0"
validator = { version = "0.16", features = ["derive"] }
schema = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Authentication
jsonwebtoken = "8.0.0-beta.8"

# Database
sqlx = { workspace = true }

# Metrics
prometheus-client = { workspace = true }

# Observability
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
opentelemetry-stdout = { workspace = true }

# Local dependencies
core = { path = "../../crates/core" }

[lib]
path = "src/lib.rs"

[dev-dependencies]
axum-test = "14.0"
tokio-test = "0.4"
jsonwebtoken = "8.0.0-beta.8"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "api"
path = "src/main.rs"