[package]
name = "keepers-service"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Keeper bots service for the decentralized application"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

ethers = { workspace = true }
alloy = { workspace = true }

# Web framework
axum = "0.7"

# Metrics
prometheus-client = "0.22"

# Local dependencies
core = { path = "../../crates/core" }
keeper = { path = "../../crates/keeper" }

[[bin]]
name = "keepers"
path = "src/main.rs"